<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>teleop_twist_keyboard</name>
  <version>0.0.0</version>
  <description>A fork of the teleop_twist_keyboard</description>
  <maintainer email="soenke.niemann@ipk.fraunhofer.de">Sönke Niemann</maintainer>
  <license>BSD License 2.0</license>
  
  <url type="website">http://wiki.ros.org/teleop_twist_keyboard</url>

  <author email="namniart@gmail.com">Austin Hendrix</author>
  <author>Graylin Trevor Jay</author>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
